--- a/home.html
+++ b/home.html
@@ -4,7 +4,8 @@
 </head>
 <body>
  <br>
- <b>Hello </b>Google Analytics <br>
+Hello Google Analytics <br>
+ Hello world <br>
  </br>
  </body>
  </html>
