--- a/home.html
+++ b/home.html
@@ -15,6 +15,8 @@
  <br>
 <b>Hello </b>Google Analytics <br>
  Hello world <br>
+ <span class="btns">
+   <a href="/product-page.html"
  </br>
  </body>
  </html>
