--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 <b>Hello </b>Google Analytics <br>
  Hello world <br>
  <span class="btns">
-  <a href="/product-page.html>"商品頁</a>
+  <a href="/product-page>"商品頁</a>
   </br>
  </body>
  </html>
