--- a/home.html
+++ b/home.html
@@ -15,8 +15,7 @@
  <br>
 <b>Hello </b>Google Analytics <br>
  Hello world <br>
- <span class="btns">
-  <a href="/product-page.html">商品頁</a>
+  <a href="product-page.html">商品頁</a>
   </br>
  </body>
  </html>
