--- a/home.html
+++ b/home.html
@@ -15,7 +15,9 @@
  <br>
 <b>Hello </b>Google Analytics <br>
  Hello world <br>
+ <span class="btns"
   <a href="product-page.html">商品頁</a>
+ </span> 
   </br>
  </body>
  </html>
